PORT 2022.07.15 >> inserindo delays

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     </lottie-player>
                 </div>
                 <div class="texts">
-                    <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">Bruno Sohara</h1>
-                    <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-once="true">Desenvolvedor Front-end</h2>
+                    <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" data-aos-delay="500">Bruno Sohara</h1>
+                    <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-once="true" data-aos-delay="500">Desenvolvedor Front-end</h2>
                     <button>
                         <a href="#aboutMe">
                             <p>Sobre Mim</p>
@@ -79,22 +79,22 @@
     <section id="aboutMe">
         <div class="container">
             <div class="elements">
-                <div class="profImg" data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
+                <div class="profImg" data-aos="flip-left" data-aos-duration="1500" data-aos-once="true" data-aos-delay="500">
                     <img src="./img/1563820244433.jpg" alt="Bruno Sohara">
                 </div>
 
                 <div class="profItems">
-                    <div class="title" data-aos="fade-out" data-aos-duration="1000" data-aos-once="true">
+                    <div class="title" data-aos="fade-out" data-aos-duration="1000" data-aos-once="true" data-aos-delay="500">
                         <h1>Sobre Mim</h1>
                     </div>
                     <div class="smBtn">
-                        <button id="github" data-aos="fade-out" data-aos-duration="1500" data-aos-once="true">
+                        <button id="github" data-aos="fade-out" data-aos-duration="1500" data-aos-once="true" data-aos-delay="500">
                             <a href="https://github.com/brunosoharagit" target="_blank">
                                 <i class="fa-brands fa-github"></i>
                                 <p>Github</p>
                             </a>
                         </button>
-                        <button id="linkedin" data-aos="fade-out" data-aos-duration="1500" data-aos-once="true">
+                        <button id="linkedin" data-aos="fade-out" data-aos-duration="1500" data-aos-once="true" data-aos-delay="500">
                             <a href="https://www.linkedin.com/in/bruno-sohara-474770186/" target="_blank">
                                 <i class="fa-brands fa-linkedin"></i>
                                 <p>LinkedIn</p>
@@ -102,7 +102,7 @@
                         </button>
                     </div>
                     <div class="descr">
-                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
+                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" data-aos-delay="500">
                             Oi. Meu nome é Bruno. <br> Sou Desenvolvedor Front-End em busca de uma nova oportunidade
                             para a
                             área. Gosto de jogos, fotografia e outros passatempos que tenho interesse.
@@ -136,7 +136,7 @@
                     <h1>Habilidades</h1>
                 </div>
                 <div class="card-list">
-                    <div class="card" data-aos="flip-left" data-aos-duration="750" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="750" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-html5-plain-wordmark colored"></i>
                         </div>
@@ -148,7 +148,7 @@
                             <div class="bar success"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="900" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="900" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-css3-plain-wordmark colored"></i>
                         </div>
@@ -160,7 +160,7 @@
                             <div class="bar success"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="1050" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="1050" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-javascript-plain colored"></i>
                         </div>
@@ -172,7 +172,7 @@
                             <div class="bar undone"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="1200" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="1200" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-git-plain-wordmark colored"></i>
                         </div>
@@ -184,7 +184,7 @@
                             <div class="bar undone"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="1350" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="1350" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-bootstrap-plain-wordmark colored"></i>
                         </div>
@@ -196,7 +196,7 @@
                             <div class="bar undone"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="1500" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-bulma-plain colored"></i>
                         </div>
@@ -208,7 +208,7 @@
                             <div class="bar undone"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="1650" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="1650" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-react-original-wordmark colored"></i>
                         </div>
@@ -220,7 +220,7 @@
                             <div class="bar undone"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="1800" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="1800" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-jest-plain colored"></i>
                         </div>
@@ -232,7 +232,7 @@
                             <div class="bar undone"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="1950" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="1950" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-typescript-plain colored"></i>
                         </div>
@@ -244,7 +244,7 @@
                             <div class="bar undone"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="2100" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="2100" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-nodejs-plain colored"></i>
                         </div>
@@ -256,7 +256,7 @@
                             <div class="bar undone"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="2250" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="2250" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-mongodb-plain colored"></i>
                         </div>
@@ -268,7 +268,7 @@
                             <div class="bar undone"></div>
                         </div>
                     </div>
-                    <div class="card" data-aos="flip-left" data-aos-duration="2400" data-aos-once="true">
+                    <div class="card" data-aos="flip-left" data-aos-duration="2400" data-aos-once="true" data-aos-delay="500">
                         <div class="card-head">
                             <i class="devicon-sequelize-plain-wordmark colored"></i>
                         </div>
@@ -294,7 +294,7 @@
                 </div>
 
                 <div class="xp-lists">
-                    <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
+                    <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000" data-aos-delay="500">
                         <div class="card-title">
                             <i class="fa-solid fa-building"></i>
                             <h2>Sottelli | Especialistas em Salesforce</h2>
@@ -315,7 +315,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
+                    <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000" data-aos-delay="500">
                         <div class="card-title">
                             <i class="fa-solid fa-building"></i>
                             <h2>Marry Perry Paris</h2>
