PORT 2022.08.18 >> adição de nova experiência profissional

--- a/index.html
+++ b/index.html
@@ -297,6 +297,22 @@
                     <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000" data-aos-delay="500">
                         <div class="card-title">
                             <i class="fa-solid fa-building"></i>
+                            <h2>Solstício Energia</h2>
+                        </div>
+                        <div class="card-time">
+                            <i class="fa-solid fa-calendar"></i>
+                            <h3>Desde AGO/2022</h3>
+                        </div>
+                        <div class="card-descr">
+                            <p>
+                                - Utilização do ReactJS para desenvolvimento Frontend;
+                            </p>
+                            
+                        </div>
+                    </div>
+                    <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000" data-aos-delay="500">
+                        <div class="card-title">
+                            <i class="fa-solid fa-building"></i>
                             <h2>Sottelli | Especialistas em Salesforce</h2>
                         </div>
                         <div class="card-time">
