--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Bruno Sohara :: Front-End Developer</title>
+    <title>Bruno Sohara :: Portfolio</title>
 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="texts">
                     <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" data-aos-delay="500">Bruno Sohara</h1>
-                    <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-once="true" data-aos-delay="500">Desenvolvedor Front-end</h2>
+                    <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-once="true" data-aos-delay="500">Desenvolvedor</h2>
                     <button>
                         <a href="#aboutMe">
                             <p>Sobre Mim</p>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="descr">
                         <p data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" data-aos-delay="500">
-                            Oi. Meu nome é Bruno. <br> Sou Desenvolvedor Front-End em busca de uma nova oportunidade
+                            Oi. Meu nome é Bruno. <br> Sou Desenvolvedor Front-End (iniciante) em busca de uma nova oportunidade
                             para a
                             área. Gosto de jogos, fotografia e outros passatempos que tenho interesse.
                         </p>
