fix: inserting level bar in react, nodejs and mongodb

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                             <i class="devicon-react-original-wordmark colored"></i>
                         </div>
                         <div class="card-body">
-                            <div class="bar undone"></div>
-                            <div class="bar undone"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
@@ -237,7 +237,7 @@
                             <i class="devicon-typescript-plain colored"></i>
                         </div>
                         <div class="card-body">
-                            <div class="bar undone"></div>
+                            <div class="bar warning"></div>
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
@@ -249,7 +249,7 @@
                             <i class="devicon-nodejs-plain colored"></i>
                         </div>
                         <div class="card-body">
-                            <div class="bar undone"></div>
+                            <div class="bar warning"></div>
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
@@ -261,7 +261,7 @@
                             <i class="devicon-mongodb-plain colored"></i>
                         </div>
                         <div class="card-body">
-                            <div class="bar undone"></div>
+                            <div class="bar warning"></div>
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
