PORT 2023.01.18 >> primeiro commit do ano + inserindo projeto profissional

--- a/index.html
+++ b/index.html
@@ -305,7 +305,10 @@
                         </div>
                         <div class="card-descr">
                             <p>
-                                - Utilização do ReactJS para desenvolvimento Frontend;
+                                - Objetivo do projeto: calcular e verificar economia na geração de energia dos clientes participantes;<br>
+                                - Utilização do ReactJS para desenvolvimento Frontend;<br>
+                                - Utilização de NodeJS a parte para desenvolvimento Backend;<br>
+                                - Consumo de API e integração do backend para o frontend;<br>
                             </p>
                             
                         </div>
@@ -380,6 +383,24 @@
                             <div class="card-footer">
                                 <a href="https://github.com/brunosoharagit/Firefox_homepage" class="button"
                                     target="_blank">Ver repositório</a>
+                                <a href="" class="button">Em breve no Github Pages</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="800"
+                        data-aos-delay="500">
+                        <div class="card-content">
+                            <div class="card-head">
+                                <img src="./img/Screenshot_5.png" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h3>EnergyPass</h3>
+                                <p>Portal do projeto profissional da empresa em que estou no momento</p>
+                                <p>Utilização do ReactJS, NodeJS e PostgreSQL.</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="/" class="button"
+                                    target="_blank">Repositório privado</a>
                                 <a href="" class="button">Em breve no Github Pages</a>
                             </div>
                         </div>
