alterando o usuário github

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="smBtn">
                         <button id="github" data-aos="fade-out" data-aos-duration="1500" data-aos-once="true" data-aos-delay="500">
-                            <a href="https://github.com/brunosoharagit" target="_blank">
+                            <a href="https://github.com/bsohara" target="_blank">
                                 <i class="fa-brands fa-github"></i>
                                 <p>Github</p>
                             </a>
